# chrome4sdp

./: BUILD.gn  DEPS  README.md
base/: BUILD.gn  base_switches.cc  (+3 more)
chrome/android/: BUILD.gn  channel.gni  chrome_public_apk_tmpl.gni  java_sources.gni
chrome/android/java/: AndroidManifest.xml  ChromeVersionConstants.java.version  proguard.flags
chrome/android/java/res/layout/: bookmark_main.xml  download_main.xml  fre_xss_defender.xml  playback_notification_bar_large.xml  secure_content_dialog.xml  toolbar_phone_common.xml  toolbar_tablet.xml  webdefender_vector_chart.xml  webdefender_vector_item.xml  xss_defender_promo_screen.xml
chrome/android/java/res/menu/: main_menu.xml
chrome/android/java/res/values/: arrays.xml  attrs.xml  colors.xml  dimens.xml  swe_strings.xml  values.xml
chrome/android/java/res/values-v17/: styles.xml
chrome/android/java/res/xml/: main_preferences.xml  privacy_preferences.xml  search_engine_preferences.xml  single_website_preferences.xml  site_settings_preferences.xml  smartprotect_details_preferences.xml  website_preferences.xml
chrome/android/java/res_swe/values/: swe_dimens.xml  swe_overlay.xml
chrome/android/java/res_swe/values-ar/: swe_overlay.xml
chrome/android/java/res_swe/values-bn/: swe_overlay.xml
chrome/android/java/res_swe/values-de/: swe_overlay.xml
chrome/android/java/res_swe/values-es-rUS/: swe_overlay.xml
chrome/android/java/res_swe/values-fa/: swe_overlay.xml
chrome/android/java/res_swe/values-fr/: swe_overlay.xml
chrome/android/java/res_swe/values-gu/: swe_overlay.xml
chrome/android/java/res_swe/values-hi/: swe_overlay.xml
chrome/android/java/res_swe/values-in/: swe_overlay.xml
chrome/android/java/res_swe/values-it/: swe_overlay.xml
chrome/android/java/res_swe/values-km/: swe_overlay.xml
chrome/android/java/res_swe/values-kn/: swe_overlay.xml
chrome/android/java/res_swe/values-lo/: swe_overlay.xml
chrome/android/java/res_swe/values-mr/: swe_overlay.xml
chrome/android/java/res_swe/values-my/: swe_overlay.xml
chrome/android/java/res_swe/values-pl/: swe_overlay.xml
chrome/android/java/res_swe/values-pt-rBR/: swe_overlay.xml
chrome/android/java/res_swe/values-ru/: swe_overlay.xml
chrome/android/java/res_swe/values-sk/: swe_overlay.xml
chrome/android/java/res_swe/values-sl/: swe_overlay.xml
chrome/android/java/res_swe/values-sr/: swe_overlay.xml
chrome/android/java/res_swe/values-sw/: swe_overlay.xml
chrome/android/java/res_swe/values-ta/: swe_overlay.xml
chrome/android/java/res_swe/values-te/: swe_overlay.xml
chrome/android/java/res_swe/values-th/: swe_overlay.xml
chrome/android/java/res_swe/values-tl/: swe_overlay.xml
chrome/android/java/res_swe/values-tr/: swe_overlay.xml
chrome/android/java/res_swe/values-uk/: swe_overlay.xml
chrome/android/java/res_swe/values-ur/: swe_overlay.xml
chrome/android/java/res_swe/values-vi/: swe_overlay.xml
chrome/android/java/res_swe/values-zh-rCN/: swe_overlay.xml
chrome/android/java/res_swe/values-zh-rHK/: swe_overlay.xml
chrome/android/java/src/org/chromium/chrome/browser/: BrowserChromeActivity.java  ChromeActionModeCallback.java  ChromeActivity.java  ChromeApplication.java  ChromeSwitches.java  ChromeTabbedActivity.java  ChromeVersionInfo.java  IntentHelper.java  KeyboardShortcuts.java  UpdateCheckService.java  UpdateNotificationService.java  WarmupManager.java  WebshieldBridge.java
chrome/android/java/src/org/chromium/chrome/browser/appmenu/: AppMenuPropertiesDelegate.java
chrome/android/java/src/org/chromium/chrome/browser/bookmarks/: BookmarkManager.java  BookmarkPage.java  BookmarkUtils.java
chrome/android/java/src/org/chromium/chrome/browser/compositor/: CompositorViewHolder.java
chrome/android/java/src/org/chromium/chrome/browser/crash/: LogcatExtractionCallable.java  MinidumpUploadService.java
chrome/android/java/src/org/chromium/chrome/browser/customtabs/: CustomTabActivity.java
chrome/android/java/src/org/chromium/chrome/browser/download/: ChromeDownloadDelegate.java  DownloadManagerService.java  DownloadPage.java
chrome/android/java/src/org/codeaurora/swe/partnerbrowsercustomizations/: SearchEngineParser.java  TemplateUrl.java
chrome/android/java/strings/: android_chrome_strings.grd
chrome/android/java/strings/translations/: android_chrome_strings_am.xtb  android_chrome_strings_da.xtb  android_chrome_strings_fa.xtb  android_chrome_strings_fil.xtb  android_chrome_strings_fr.xtb  android_chrome_strings_hi.xtb  android_chrome_strings_hr.xtb  android_chrome_strings_lt.xtb  android_chrome_strings_lv.xtb  android_chrome_strings_pt-BR.xtb  android_chrome_strings_ru.xtb  android_chrome_strings_sl.xtb  android_chrome_strings_sr.xtb  android_chrome_strings_uk.xtb
chrome/android/javatests/src/org/chromium/chrome/browser/: WebDefenderTest.java  WebRefinerTest.java  WebRefinerTestServer.java  XSSDefenderTest.java
(+573 files in other folders)
